Changed Calendar List Font to White

--- a/ocr_server/project/templates/calendar.html
+++ b/ocr_server/project/templates/calendar.html
@@ -10,7 +10,7 @@
         Here is your calendar with all your upcoming client applications.
       </h1>
 
-      <div id="list">
+      <div id="calendar_list">
         <ul>
           {% for event in events %}
           <li> {{ event }} </li>
