--- a/ocr_server/project/static/css/template.css
+++ b/ocr_server/project/static/css/template.css
@@ -53,9 +53,10 @@ a {
   color: #fff;
 }
 
-#list  li {
+#calendar_list  li {
   font-size: 20px;
   list-style: none;
+  color: #fff;
 }
 
 #profilePage_content {
